# customer_support_chatbot-aws

./: .gitignore  .vercelignore  README.md  dockerfile  pyproject.toml  requirements.txt
api/: index.py
app/: __init__.py  main.py
db/: __init__.py  chat_memory_dynamo.py  escalations_rds.py
src/: README.md  agent.py  config.py  load_documents.py  nodes.py  prompts.py  state.py  supabase_client.py
static/: index.html
tests/: eval-sample.csv  eval_response.csv  eval_set.csv  test_classification_eval.py  test_rag.py  test_response_eval.py
