[project]
name = "customer-support-mvp"
version = "0.1.0"
description = "A minimal prototype for an automated customer-support agent"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pytest>=8.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langsmith>=0.1.0",
    "supabase>=2.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]

